# plag-tool

./: .env.example  .gitignore  README.md  pyproject.toml  report_sample_source.json  todo.txt
docs/: chunker.md  splitter.md
examples/: english_source.txt  english_target.txt  sample_source.txt  sample_target.txt
plag_tool/: __init__.py
plag_tool/cli/: __init__.py  display.py  main.py
plag_tool/core/: __init__.py  chunker.py  config.py  detector.py  embeddings.py  log.py  report.py  splitter.py  types.py  vector_store.py
tests/: __init__.py  test_chunker.py  test_chunker_with_embedding.py  test_embeddings.py  test_splitter.py  test_splitter_with_embedding.py
